# ProductRecommendationEngine

./: .gitignore  01_EDA.ipynb  README.md  pyproject.toml  render-build.sh  render.yaml  requirements-backend.txt  requirements.txt
data/: test.npz
src/api/: main.py  routes.py  schemas.py
src/inference/: faiss_index.py  model_loader.py  recommender.py
src/training/: build_item_meta.py  build_matrix.py  eval_als_strong.py  preprocess.py  save_mappings.py  train_als_strong.py
src/ui/: streamlit_app.py
