[tool.poetry]
name = "recommender-api"
version = "0.1.0"
description = "ALS-based recommender inference service"
authors = ["Kavana Padaki"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

numpy = "1.26.4"
scipy = "1.10.1"
faiss-cpu = "1.7.3"
implicit = "0.7.2"

pandas = "*"
scikit-learn = "*"
fastapi = "*"
uvicorn = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
